# ynab-sync

./: .gitignore  Dockerfile  README.org  bank.example.env  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  pytest.yaml
ynab_sync/: __main__.py  cli.py  constants.py  logic.py  quickstart.py
ynab_sync/gocardless/: api.py  data.py  gocardless.py  models.py  schema.json
ynab_sync/tests/: __init__.py  test_e2e.py  test_gocardless.py
ynab_sync/tests/data/: gocardless.py  ynab.py
ynab_sync/ynab/: api.py  models.py  ynab.py
