[project]
name = "ynab-sync"
version = "0.3.1"
authors = [
    { name="Aleksei Atavin", email="axeoman@gmail.com" },
    { name="Kong Minh Cap", email="kminhc@gmail.com" },
]
description = "Allows you to sync between your bank account (if it is supported by GoCardless) and upload transactions to YNAB on regular basis (e.g. crontab job could suffice)"
requires-python = ">=3.11"
dependencies = [
    "appeal",
    "pydantic",
    "requests",
    "tabulate",
    "bullet"
]

[project.scripts]
ynab-sync = "ynab_sync.__main__:app.main"

[project.urls]
"Homepage" = "https://github.com/axeoman/ynab-sync"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
line-length = 125

[tool.pyright]
include = ["ynab_sync"]
exclude = []

venv = "venv"
stubPath = ""
venvPath = "."

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"

